--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,8 +7,7 @@
 	--black: #171718;
 	--black-border: #26292d;
 	--white: #fff;
-	--purple: #5c62ec;
-
+	--green: #00722f;
 	/* Nav */
 	--nav-bg: var(--black);
 	--nav-border: var(--black-border);
@@ -32,19 +31,6 @@
 	--project-card-text: var(--black);
 	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
 }
-
-.dark {
-	/* Dark mode */
-	--page-bg: #252526;
-	--text-color: var(--white);
-
-	--title-1: var(--white);
-
-	--project-card-bg: var(--black);
-	--project-card-text: var(--white);
-	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.8);
-}
-
 html,
 body {
 	min-height: 100vh;
@@ -104,49 +90,6 @@ body {
 	line-height: 1.3;
 }
 
-/* Dark mode btn */
-
-.dark-mode-btn {
-	order: 9;
-
-	position: relative;
-	display: flex;
-	justify-content: space-between;
-
-	width: 51px;
-	height: 26px;
-	padding: 5px;
-
-	border-radius: 50px;
-	background-color: #272727;
-}
-
-.dark-mode-btn::before {
-	content: '';
-
-	position: absolute;
-	top: 1px;
-	left: 1px;
-
-	display: block;
-	width: 24px;
-	height: 24px;
-
-	border-radius: 50%;
-	background-color: #fff;
-
-	transition: left 0.2s ease-in;
-}
-
-.dark-mode-btn--active::before {
-	left: 26px;
-}
-
-.dark-mode-btn__icon {
-	position: relative;
-	z-index: 9;
-}
-
 /* Btn */
 
 .btn {
@@ -155,7 +98,7 @@ body {
 	padding: 12px 28px;
 
 	border-radius: 5px;
-	background-color: var(--accent);
+	background-color: var(--green);
 	color: var(--white);
 	letter-spacing: 0.15px;
 	font-size: 16px;
